# sales-management-laravel-portfolio

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile.prod  README.md  composer.json  deploy-k8s.sh  deploy-secrets.sh  deploy.sh  docker-compose.old.yml  docker-compose.yml  fargate_troubleshooting_guide.md  healthcheck.php  infrastructure.drawio  package-lock.json  package.json  phpunit.dusk.xml  phpunit.xml  playwright.config.js  sbom.json  test-fpm.sh  webpack.mix.js
.before-circleci/: config.yml
.claude/: settings.local.json
.gemini/: settings.json
app/: helpers.php
config/: app.php  auth.php  database.php  dompdf.php  filesystems.php  logging.php  mail.php  services.php
crewai_tool/: .env.example  README.md  issue.md  pr_result.md  pyproject.toml  qa_report.md  qa_result.md
crewai_tool/.claude/: settings.local.json
crewai_tool/src/crewai_tool/: crew.py  main.py
crewai_tool/src/crewai_tool/config/: agents.yaml  tasks.yaml
crewai_tool/src/crewai_tool/tools/: custom_tool.py
docker/: supervisord.conf
documents/: aws_iam_setup.md
k8s-manifests/: 01-namespace.yaml  02-network-policy.yaml  03-service-account.yaml  04-deployment.yaml  05-service.yaml  06-ingress.yaml
playwright-report/: index.html
public/: .htaccess  index.php  mix-manifest.json  transaction-pdftest.html
routes/: api.php  web.php  web_routes_contact_import_addition.txt
terraform-ecs/: cache.tf  ecs.tf  lb.tf  main.tf  outputs.tf  security.tf  sqs.tf  storage.tf
terraform-k8s/: .terraform.lock.hcl  README.md  aws-lbc.tf  cache.tf  database.tf  eks.tf  irsa.tf  (+4 more)
(+599 files in other folders)
