[project]
name = "crewai_tool"
version = "0.1.0"
description = "crewai-tool using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,tools]==1.9.3",
]

[project.scripts]
crewai_tool = "crewai_tool.main:run"
run_crew = "crewai_tool.main:run"
train = "crewai_tool.main:train"
replay = "crewai_tool.main:replay"
test = "crewai_tool.main:test"
run_with_trigger = "crewai_tool.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
